// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Verification Alert Correct generation of default params values 1`] = `
<div>
  <WithStyles(ForwardRef(Dialog))
    TransitionComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    aria-describedby="alert-dialog-slide-description"
    aria-labelledby="alert-dialog-slide-title"
    open={true}
  >
    <WithStyles(ForwardRef(DialogTitle))
      className="makeStyles-title-2"
      id="alert-dialog-slide-title"
    >
      Are you sure you want to continue?
    </WithStyles(ForwardRef(DialogTitle))>
    <WithStyles(ForwardRef(DialogContent))>
      <WithStyles(ForwardRef(DialogContentText))
        id="alert-dialog-slide-description"
      >
        Once you accept this there is no turning back.
      </WithStyles(ForwardRef(DialogContentText))>
    </WithStyles(ForwardRef(DialogContent))>
    <WithStyles(ForwardRef(DialogActions))>
      <WithStyles(ForwardRef(Button))
        color="primary"
        id="alert-dialog-cancel-button"
        onClick={[Function]}
      >
        No
      </WithStyles(ForwardRef(Button))>
      <WithStyles(ForwardRef(Button))
        color="secondary"
        id="alert-dialog-confirm-button"
        onClick={[Function]}
      >
        Yes, I'm sure.
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(DialogActions))>
  </WithStyles(ForwardRef(Dialog))>
</div>
`;

exports[`Verification Alert Correct render with custom params values 1`] = `
<div>
  <WithStyles(ForwardRef(Dialog))
    TransitionComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    aria-describedby="alert-dialog-slide-description"
    aria-labelledby="alert-dialog-slide-title"
    open={true}
  >
    <WithStyles(ForwardRef(DialogTitle))
      className="makeStyles-title-2"
      id="alert-dialog-slide-title"
    >
      test
    </WithStyles(ForwardRef(DialogTitle))>
    <WithStyles(ForwardRef(DialogContent))>
      <WithStyles(ForwardRef(DialogContentText))
        id="alert-dialog-slide-description"
      >
        test
      </WithStyles(ForwardRef(DialogContentText))>
    </WithStyles(ForwardRef(DialogContent))>
    <WithStyles(ForwardRef(DialogActions))>
      <WithStyles(ForwardRef(Button))
        color="primary"
        id="alert-dialog-cancel-button"
        onClick={[Function]}
      >
        test
      </WithStyles(ForwardRef(Button))>
      <WithStyles(ForwardRef(Button))
        color="secondary"
        id="alert-dialog-confirm-button"
        onClick={[Function]}
      >
        test
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(DialogActions))>
  </WithStyles(ForwardRef(Dialog))>
</div>
`;
